--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/quiz_playground
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=${MYSQL_PASSWORD:}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8090
+frontend.url=${FRONTEND_URL:http://localhost:5173}
 #spring.jpa.show-sql: true
